{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 34,
  "lineage": "2224e758-5cc5-79bb-b6f8-6b420102f0fe",
  "resources": [
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034d1c40df5d412a4",
            "domain": "vpc",
            "id": "eipalloc-034d1c40df5d412a4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-86-47.compute-1.amazonaws.com",
            "public_ip": "52.44.86.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07274f80efae9eef8",
            "association_id": "eipassoc-08e7d16090e168ce1",
            "domain": "vpc",
            "id": "eipalloc-07274f80efae9eef8",
            "instance": "i-01ad9a93450bd8540",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0caecd163c95613c3",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-18-210-68-173.compute-1.amazonaws.com",
            "public_ip": "18.210.68.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.stack_deployment.aws_instance.webserver",
            "module.stack_deployment.aws_key_pair.deployer",
            "module.stack_deployment.aws_security_group.web",
            "module.stack_deployment.aws_subnet.webpub",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:044722000155:instance/i-0f196f476501dd1bc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f196f476501dd1bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2d660d982f353d8",
            "private_dns": "ip-10-0-2-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d2658cfa58240fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feee7bcce73bae86",
            "tags": {
              "Name": "Appserver"
            },
            "tags_all": {
              "Name": "Appserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065f628d26f169d31"
            ]
          },
          "dependencies": [
            "module.stack_deployment.aws_key_pair.deployer",
            "module.stack_deployment.aws_security_group.app",
            "module.stack_deployment.aws_subnet.apppvt",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:044722000155:instance/i-01ad9a93450bd8540",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ad9a93450bd8540",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0caecd163c95613c3",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_ip": "52.90.24.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b24309f06de2ad50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f29af8a157cb43d",
            "tags": {
              "Name": "Webserver"
            },
            "tags_all": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0d8e8e16d808b25"
            ]
          },
          "dependencies": [
            "module.stack_deployment.aws_key_pair.deployer",
            "module.stack_deployment.aws_security_group.web",
            "module.stack_deployment.aws_subnet.webpub",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:internet-gateway/igw-037323e676fba50a1",
            "id": "igw-037323e676fba50a1",
            "owner_id": "044722000155",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034d1c40df5d412a4",
            "connectivity_type": "public",
            "id": "nat-0ecbac1bdc039db00",
            "network_interface_id": "eni-05ba8296dd222c473",
            "private_ip": "10.0.1.94",
            "public_ip": "52.44.86.47",
            "subnet_id": "subnet-07f29af8a157cb43d",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.stack_deployment.aws_eip.example",
            "module.stack_deployment.aws_subnet.webpub",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:network-acl/acl-08b978844f0c143c4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-08b978844f0c143c4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "044722000155",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL"
            },
            "tags_all": {
              "Name": "PrivateNACL"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:network-acl/acl-00497f7355d026c33",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00497f7355d026c33",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "044722000155",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNACL"
            },
            "tags_all": {
              "Name": "PublicNACL"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "app",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0323d350af69dee82",
            "network_acl_id": "acl-08b978844f0c143c4",
            "subnet_id": "subnet-0feee7bcce73bae86"
          },
          "dependencies": [
            "module.stack_deployment.aws_network_acl.private",
            "module.stack_deployment.aws_subnet.apppvt",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d703ec2cb116b680",
            "network_acl_id": "acl-08b978844f0c143c4",
            "subnet_id": "subnet-015ddd54e42295d2d"
          },
          "dependencies": [
            "module.stack_deployment.aws_network_acl.private",
            "module.stack_deployment.aws_subnet.dbpvt",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "web",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09b4dded3c944ed24",
            "network_acl_id": "acl-00497f7355d026c33",
            "subnet_id": "subnet-07f29af8a157cb43d"
          },
          "dependencies": [
            "module.stack_deployment.aws_network_acl.public",
            "module.stack_deployment.aws_subnet.webpub",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:route-table/rtb-0bba7ace8cab49959",
            "id": "rtb-0bba7ace8cab49959",
            "owner_id": "044722000155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRoute"
            },
            "tags_all": {
              "Name": "PrivateRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:route-table/rtb-05a8a57f9b6d4f2ca",
            "id": "rtb-05a8a57f9b6d4f2ca",
            "owner_id": "044722000155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037323e676fba50a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute"
            },
            "tags_all": {
              "Name": "PublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_internet_gateway.igw",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb25c98f7fdf1b7",
            "route_table_id": "rtb-05a8a57f9b6d4f2ca",
            "subnet_id": "subnet-07f29af8a157cb43d"
          },
          "dependencies": [
            "module.stack_deployment.aws_internet_gateway.igw",
            "module.stack_deployment.aws_route_table.public",
            "module.stack_deployment.aws_subnet.webpub",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvta",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e053404734b77c7d",
            "route_table_id": "rtb-0bba7ace8cab49959",
            "subnet_id": "subnet-0feee7bcce73bae86"
          },
          "dependencies": [
            "module.stack_deployment.aws_route_table.private",
            "module.stack_deployment.aws_subnet.apppvt",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtc",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5c0d36d0257890",
            "route_table_id": "rtb-0bba7ace8cab49959",
            "subnet_id": "subnet-015ddd54e42295d2d"
          },
          "dependencies": [
            "module.stack_deployment.aws_route_table.private",
            "module.stack_deployment.aws_subnet.dbpvt",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtd",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0543ff044dc7bff19",
            "route_table_id": "rtb-0bba7ace8cab49959",
            "subnet_id": "subnet-01e052142c9046149"
          },
          "dependencies": [
            "module.stack_deployment.aws_route_table.private",
            "module.stack_deployment.aws_subnet.dbpvt2",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:security-group/sg-065f628d26f169d31",
            "description": "Allow jump into the instance through webserver sg",
            "egress": [],
            "id": "sg-065f628d26f169d31",
            "ingress": [],
            "name": "appserversg",
            "name_prefix": "",
            "owner_id": "044722000155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserver-sg"
            },
            "tags_all": {
              "Name": "appserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:security-group/sg-0ad9612d4d7229fe5",
            "description": "Allow mysql queries on RDS instance",
            "egress": [],
            "id": "sg-0ad9612d4d7229fe5",
            "ingress": [],
            "name": "dbserversg",
            "name_prefix": "",
            "owner_id": "044722000155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbserver-sg"
            },
            "tags_all": {
              "Name": "dbserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:security-group/sg-0d0d8e8e16d808b25",
            "description": "Allow ssh into the instance",
            "egress": [],
            "id": "sg-0d0d8e8e16d808b25",
            "ingress": [],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "044722000155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-141542998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-065f628d26f169d31",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_security_group.app",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.3.0/24"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1797372092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad9612d4d7229fe5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_security_group.db",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2654389347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d0d8e8e16d808b25",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_security_group.web",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webo",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1652821090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d0d8e8e16d808b25",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_deployment.aws_security_group.web",
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apppvt",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0feee7bcce73bae86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feee7bcce73bae86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Apppvt"
            },
            "tags_all": {
              "Name": "Apppvt"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbpvt",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-015ddd54e42295d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015ddd54e42295d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbpvt"
            },
            "tags_all": {
              "Name": "dbpvt"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbpvt2",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-01e052142c9046149",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e052142c9046149",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbpvt2"
            },
            "tags_all": {
              "Name": "dbpvt2"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webpub",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-07f29af8a157cb43d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f29af8a157cb43d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webpub"
            },
            "tags_all": {
              "Name": "Webpub"
            },
            "vpc_id": "vpc-0b88ad4c0282a7903"
          },
          "dependencies": [
            "module.stack_deployment.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.stack_deployment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.stack_deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:vpc/vpc-0b88ad4c0282a7903",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb1346ed5dc32687",
            "default_route_table_id": "rtb-03794ce88c322d827",
            "default_security_group_id": "sg-04ffcd84b6cc7979a",
            "dhcp_options_id": "dopt-02f77750c956a9571",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b88ad4c0282a7903",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03794ce88c322d827",
            "owner_id": "044722000155",
            "tags": {
              "Name": "CustomVPC"
            },
            "tags_all": {
              "Name": "CustomVPC"
            }
          }
        }
      ]
    }
  ]
}